- Horizontal recall ({@RW17,22}) supported?
- 'Cannot run' / 'Delayed run' bug fixed.
- World-coodination display for '@' screen.
- Player-location is shown on 'M'(Map) screen. (wilderness map is disabled)
- Ghost never bleeds.

13/12/2001 (Jir)
- NEWBIES_CANNOT_DROP specifies the minimum level for item/au dropping.
- ANTI_ARTS_HORDE configure option added.
- all the admin-level slash-commands are available again now.

13/12/2001 (Evileye)
- Fixed bugs in teleport_player_level
- Added town generation for Dungeon Master (limited)
- Monster generation in town/near town houses suppressed.
- Made unstatic_level function (was duplicated)
- Fixed bug in unstatic_level (space/time anchor wasnt killed for all)
- Fixed bug where new towns would not have objects/monsters attached
- Added some support for ironman dungeons - not recall
- Added support for hellish dungeons.
- Dungeons may not be generated in towns (must generate with town)

14/12/2001 (Evileye)
- Forced net code to recheck IP/port when asked
- Non mapping dungeons added. Player does not remember the map.
- Fixed bug which caused towns to be cloned in wild generator.
- Baselevel for new towns is set correctly for getlevel()
- Fixed bug which prevented towers having new_level_up_* set
  if they were maxdepth 1. (Caused endless loop in scatter)

16/12/2001 (Evileye)
- Added multiple store code, so towns have their own stores.
- Server/client changed to display worldpos (messy still)
- Monster filter added to dungeon code
- Fixed compilation problem with control.c
- Houses added to 24 hour maintenance cycle
- Logging added to maintenance (keep logs???)

16/12/2001 (Jir)
- PernA traps (about 160 kinds) and trap system ported.
- Fixed a bug where vault didn't contain monsters.
- Given version number v3.3.0alpha (it'll be v4.0.0 soon :)
- Version warnings for older(/newer) initialize files.

17/12/2001 (Jir)
- Fixed a bug where creating a tower caused crash.
- Fixed a bug where selling an item to a store caused crash.