@@ -457,3 +457,4 @@ Change list for PernMangband
 17/12/2001 (Jir)
 - Fixed a bug where creating a tower caused crash.
 - Fixed a bug where selling an item to a store caused crash.
+- Detected traps will interrupt running.
